Remove horizontal scrolling and fix centering

--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
   color: var(--color-text-primary); 
   position:absolute; height:100%; width:100%;
   display: table;
+  margin-inline: auto; 
+  overflow-inline: hidden;
 }
 
 .outer {
